--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,47 @@
+:root {
+  --salmon: #F3ADAB;
+  --black: #222222;
+  --blue: #5276b7;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: Inter, sans-serif;
   margin: 0 auto;
   padding: 2rem;
   max-width: 65ch;
   font-size: 1.25rem;
   line-height: 1.5;
+  color: var(--black);
 }
 
 input[type="checkbox"] {
   border: 1px solid gainsboro;
   width: 1.25rem;
   height: 1.25rem;
+}
+
+a {
+  color: var(--blue);
+}
+
+h1 {
+  font-family: Gotham, sans-serif;
+  line-height: 1;
+  letter-spacing: -.1rem;
+  margin-top: 0;
+}
+
+h1 a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.dot {
+  font-family: Inter, sans-serif;
+  color: var(--salmon);
+}
+
+code[class*="language-"],
+pre[class*="language-"] {
+  white-space: pre-wrap !important;
 }
