Add logo, wordmark and layout styles

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -14,7 +14,12 @@ title: 11ty Recipes
 <body>
 
 <header>
-  <h1><a href="/"><span>11ty</span><span class="dot">&middot;</span><span>Recipes</span></a></h1>
+  <div class="er-container">
+    <a href="/" class="er-inline-flex-row">
+      <img src="/images/logos/possum.svg" alt="A delightful cartoon possum wearing a chef's hat. A chef's knife and spoon are crossed beneath him." class="er-logo">
+      <img src="/images/logos/wordmark.svg" alt="Eleventy Recipes" class="er-wordmark">
+    </a>
+  </div>
 </header>
 
 <main>
