--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,24 @@
 :root {
-  --salmon: #F3ADAB;
+  --pink: #ffa9a9;
   --black: #222222;
+  --white: #ffffff;
   --blue: #5276b7;
+  --red: #ca3b35;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
+  display: grid;
+  grid-template-columns: minmax(1rem, 1fr) minmax(0, 65ch) minmax(1rem, 1fr);
+  grid-template-areas:
+  "header header header"
+  ". main ."
+  "footer footer footer";
   font-family: Inter, sans-serif;
-  margin: 0 auto;
-  padding: 2rem;
-  max-width: 65ch;
+  margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
   color: var(--black);
@@ -20,28 +30,60 @@ input[type="checkbox"] {
   height: 1.25rem;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 a {
   color: var(--blue);
 }
 
-h1 {
-  font-family: Gotham, sans-serif;
-  line-height: 1;
-  letter-spacing: -.1rem;
-  margin-top: 0;
+h1, h2, h3, h4, p, ul, ol {
+  margin: 0 0 1.5rem 0;
 }
 
-h1 a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.dot {
-  font-family: Inter, sans-serif;
-  color: var(--salmon);
+ul, ol {
+  padding-left: 1.5rem;
 }
 
 code[class*="language-"],
 pre[class*="language-"] {
   white-space: pre-wrap !important;
+}
+
+header {
+  background-color: var(--blue);
+  color: var(--white);
+  grid-area: header;
+  padding: 1rem 0;
+  margin-bottom: 2rem;
+}
+
+main {
+  grid-area: main;
+}
+
+.er-container {
+  max-width: 65ch;
+  margin: 0 auto;
+}
+
+.er-inline-flex-row {
+  display: inline-flex;
+  align-items: center;
+}
+
+.er-flex-row > :not(:last-child) {
+  margin-right: 1rem;
+}
+
+.er-logo {
+  width: 150px;
+  height: auto;
+}
+
+.er-wordmark {
+  width: 250px;
+  height: auto;
 }
