Move content to _src,  set source in .eleventy.js; add H1 to header

--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -17,8 +17,9 @@ title: 11ty Recipes
   <div class="er-container">
     <a href="/" class="er-inline-flex-row">
       <img src="/images/logos/possum.svg" alt="A delightful cartoon possum wearing a chef's hat. A chef's knife and spoon are crossed beneath him." class="er-logo">
-      <img src="/images/logos/wordmark.svg" alt="Eleventy Recipes" class="er-wordmark">
+      <img src="/images/logos/wordmark.svg" alt="Eleventy Recipes Wordmark" class="er-wordmark">
     </a>
+    <h1 class="sr-only">Eleventy Recipes</h1>
   </div>
 </header>
 
