--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -39,7 +39,20 @@ a {
   color: var(--blue);
 }
 
-h1, h2, h3, h4, p, ul, ol {
+h1 {
+  margin: 0;
+  line-height: 0;
+}
+
+h1 a {
+  display: block;
+}
+
+h1 img {
+  display: inline-block;
+}
+
+h2, h3, h4, p, ul, ol {
   margin: 0 0 1.5rem 0;
 }
 
@@ -86,6 +99,15 @@ main {
 .er-wordmark {
   width: 150px;
   height: auto;
+}
+
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
 
 @media (min-width: 600px) {
