--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -1,14 +1,13 @@
 ---
 title: 11ty Recipes
 ---
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
-  <link href="/css/style.css" rel="stylesheet"> 
+  {% include "partials/meta.njk" %}
+  <link href="/css/style.css" rel="stylesheet">
   <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 </head>
 <body>
