Add image dimensions to open graph tags

--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -15,8 +15,8 @@ title: 11ty Recipes
 <header>
   <div class="er-container er-space-between">
     <a href="/" class="er-inline-flex-row">
-      <img src="/images/logos/possum.svg" alt="A delightful cartoon possum wearing a chef's hat. A chef's knife and spoon are crossed beneath him." class="er-logo">
-      <img src="/images/logos/wordmark.svg" alt="Eleventy Recipes Wordmark" class="er-wordmark">
+      <img src="/images/logos/possum.svg" alt="A delightful cartoon possum wearing a chef's hat. A chef's knife and spoon are crossed beneath him." class="er-logo" width="150" height="150">
+      <img src="/images/logos/wordmark.svg" alt="Eleventy Recipes Wordmark" class="er-wordmark" width="250" height="39">
     </a>
     <h1 class="sr-only">Eleventy Recipes</h1>
     <nav>
