--- a/_src/_includes/partials/meta.njk
+++ b/_src/_includes/partials/meta.njk
@@ -25,6 +25,8 @@
   <meta name="twitter:image" content="{{ thumbnail }}" />
   <meta property="og:image:alt" content="Page image for {{ site.name }}" />
   <meta name="twitter:image:alt" content="Page image for {{ site.name }}" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <meta name="description" content="{{ description }}" />
   <meta name="twitter:description" content="{{ description }}" />
