Change margin to padding in header

--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -76,8 +76,8 @@ header {
 }
 
 header .er-container {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 nav a {
