--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -7,8 +7,9 @@ title: 11ty Recipes
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% include "partials/meta.njk" %}
-  <link href="/css/style.css" rel="stylesheet">
-  <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
+  <style>
+    {% include "../css/style.css" %}
+  </style>
 </head>
 <body>
 
