Update Sass workflow

--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -8,7 +8,7 @@ title: 11ty Recipes
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% include "partials/meta.njk" %}
   <style>
-    {% include "../css/style.css" %}
+    {% include "../../_site/css/style.css" %}
   </style>
 </head>
 <body>
