Aww hell, just link to the CSS

--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -7,9 +7,7 @@ title: 11ty Recipes
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% include "partials/meta.njk" %}
-  <style>
-    {% include "/css/style.css" %}
-  </style>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
