--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -7,7 +7,7 @@ title: 11ty Recipes
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% include "partials/meta.njk" %}
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
 </head>
 <body>
 
