--- a/_src/sass/style.scss
+++ b/_src/sass/style.scss
@@ -77,6 +77,10 @@ pre[class*="language-"] {
   white-space: pre-wrap !important;
 }
 
+pre {
+  margin: 0 0 1.5rem 0;
+}
+
 header {
   background-color: var(--blue);
   color: var(--white);
