Add Fathom analytics

--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -10,6 +10,7 @@ title: 11ty Recipes
   <style>
     {% include "../../_site/css/style.css" %}
   </style>
+  <script src="https://cdn.usefathom.com/script.js" data-site="QHBLODVU" defer></script>
 </head>
 <body>
 
