--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -7,6 +7,8 @@ title: 11ty Recipes
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% include "partials/meta.njk" %}
+  <link rel="preload" href="/fonts/inter-regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/inter-semibold.woff2" as="font" type="font/woff2" crossorigin>
   <style>
     {% include "../../_site/css/style.css" %}
   </style>
