--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -12,7 +12,7 @@ title: 11ty Recipes
   <style>
     {% include "../../_site/css/style.css" %}
   </style>
-  <script src="https://cdn.usefathom.com/script.js" data-site="QHBLODVU" defer></script>
+  <script src="https://descriptive-masterful.11ty.recipes/script.js" data-site="QHBLODVU" defer></script>
 </head>
 <body>
 
